--- a/XEMSign/XEMSign.csproj
+++ b/XEMSign/XEMSign.csproj
@@ -49,20 +49,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Base32Encoder, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CSharp2nem.1.0.53\lib\net452\Base32Encoder.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\CSharp2nem.2.0.5\lib\net452\Base32Encoder.dll</HintPath>
     </Reference>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.1.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
-      <HintPath>..\packages\CSharp2nem.1.0.53\lib\net452\BouncyCastle.Crypto.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\CSharp2nem.2.0.5\lib\net452\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
     <Reference Include="Chaos.NaCl, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CSharp2nem.1.0.53\lib\net452\Chaos.NaCl.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\CSharp2nem.2.0.5\lib\net452\Chaos.NaCl.dll</HintPath>
     </Reference>
     <Reference Include="CSharp2nem, Version=1.0.40.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CSharp2nem.1.0.53\lib\net452\CSharp2nem.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\CSharp2nem.2.0.5\lib\net20\CSharp2nem.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.8.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
