--- a/XEMSign/XEMSign.csproj
+++ b/XEMSign/XEMSign.csproj
@@ -57,8 +57,7 @@
     <Reference Include="Chaos.NaCl, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\CSharp2nem.2.0.5\lib\net452\Chaos.NaCl.dll</HintPath>
     </Reference>
-    <Reference Include="CSharp2nem, Version=1.0.40.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="CSharp2nem">
       <HintPath>..\packages\CSharp2nem.2.0.5\lib\net20\CSharp2nem.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -78,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\MyConfiguration.cs" />
+    <Compile Include="ManualAsyncResult2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
